// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test custom class with empty state 1`] = `
<div
  className="Pinpoint Statistic Views wrapper test-custom"
>
  <svg
    fill="none"
    height={16}
    stroke="currentColor"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth="2"
    viewBox="0 0 24 24"
    width={16}
  >
    <path
      d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"
    />
    <circle
      cx="12"
      cy="12"
      r="3"
    />
  </svg>
  <span
    className="Statistic Views count"
  >
    0
  </span>
</div>
`;

exports[`Test custom class with large number 1`] = `
<div
  className="Pinpoint Statistic Views wrapper test-custom"
>
  <svg
    fill="none"
    height={16}
    stroke="currentColor"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth="2"
    viewBox="0 0 24 24"
    width={16}
  >
    <path
      d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"
    />
    <circle
      cx="12"
      cy="12"
      r="3"
    />
  </svg>
  <span
    className="Statistic Views count"
  >
    2222
  </span>
</div>
`;

exports[`Test empty state 1`] = `
<div
  className="Pinpoint Statistic Views wrapper "
>
  <svg
    fill="none"
    height={16}
    stroke="currentColor"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth="2"
    viewBox="0 0 24 24"
    width={16}
  >
    <path
      d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"
    />
    <circle
      cx="12"
      cy="12"
      r="3"
    />
  </svg>
  <span
    className="Statistic Views count"
  >
    0
  </span>
</div>
`;

exports[`Test large number 1`] = `
<div
  className="Pinpoint Statistic Views wrapper "
>
  <svg
    fill="none"
    height={16}
    stroke="currentColor"
    strokeLinecap="round"
    strokeLinejoin="round"
    strokeWidth="2"
    viewBox="0 0 24 24"
    width={16}
  >
    <path
      d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"
    />
    <circle
      cx="12"
      cy="12"
      r="3"
    />
  </svg>
  <span
    className="Statistic Views count"
  >
    2222
  </span>
</div>
`;
